fix: Context menu z-index

--- a/packages/seed-bible/seed-bible/components/ContextMenu/ContextMenu.css
+++ b/packages/seed-bible/seed-bible/components/ContextMenu/ContextMenu.css
@@ -36,7 +36,7 @@
   background: var(--sb-menu-background);
   color: var(--sb-menu-font-color);
   box-shadow: 0 10px 30px #00000014;
-  z-index: 40;
+  z-index: 500;
 }
 
 .sb-context-menu-item {
